--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
   },
   "dependencies": {
     "@expo-google-fonts/bevan": "^0.1.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.8.2",
+    "@react-navigation/stack": "^5.11.1",
     "animate.css": "^4.1.1",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-screens": "^2.12.0",
     "react-native-web": "~0.13.12",
-    "reset-css": "^5.0.1"
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reset-css": "^5.0.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
